# stoke-data

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README.md  SKILL.md  pyproject.toml
.trae/: rules.md  豆包.md
.trae/agents/: code-debugger-refactorer.md  quant-backend-developer.md  quant-frontend-developer.md  quant-system-tester.md  strategy-framework-auditor.md
review/: stoke-skill-v1.3.0-图灵使用报告.md  stoke-v1.3.0-杨戬使用报告.md  三尺-stoke-v1.3.0-测试报告-20260627.md  太白太白-stoke-v1.3.0-测试报告-20260627.md
scripts/: verify_install.py
stoke/: __init__.py  client.py  client_cached.py  config.py  fallback.py  store.py  trading_calendar.py  utils.py
stoke/sources/: akshare_source.py  baostock_source.py  cninfo_source.py  datacenter_source.py  eastmoney_source.py  efinance_source.py  legulegu_source.py  mootdx_source.py  push2_source.py  tencent_direct_source.py  ths_hot_source.py  ths_source.py
tests/: debug_info.py  smoke_test.py  stress_full_report.html  stress_test.py  stress_test_report.html  stress_test_results.json  test_akshare.py  test_baostock.py  test_cross_platform.py  test_legulegu.py  test_mootdx.py  test_mootdx_blocks.py  test_mootdx_boundary.py  test_speed_comparison.py  test_stress_100.py  test_stress_full_100.py  test_stress_v2.py  test_tencent_extended.py
