[project]
name = "stoke-data"
version = "2.1.0"
description = "A股量化投研数据层 — 纯数据获取，无策略/时机/执行逻辑，可被任意模块或智能体复用"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.60",
    "baostock>=0.9.1",
    "beautifulsoup4>=4.12.0",
    "efinance>=0.5.8",
    "mootdx>=0.11.7",
    "pandas>=2.0.0",
    "requests>=2.34.2",
]

[tool.setuptools.packages.find]
include = ["stoke*"]

[build-system]
requires = ["setuptools", "pandas"]
build-backend = "setuptools.build_meta"
